<resources>
    <string name="app_name">Arithmetic Training</string>
    <string name="backspace">BACK</string>
    <string name="enter">ENTER</string>
    <string name="level">Level: </string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_plus">+</string>
    <string name="button_minus">−</string>
    <string name="button_multiply">×</string>
    <string name="button_divide">÷</string>
    <string name="button_plus_and_minus">+ &amp; −</string>
    <string name="button_multiply_and_divide">× &amp; ÷</string>
    <string name="button_all_operations">TEST ALL OPERATIONS</string>
    <string name="number_plus_number">%d + %d</string>
    <string name="number_minus_number">%d − %d</string>
    <string name="number_multiply_number">%d × %d</string>
    <string name="number_divide_number">%d ÷ %d</string>
</resources>
